--- a/Brewery-SCADA-System/Brewery-SCADA-System.csproj
+++ b/Brewery-SCADA-System/Brewery-SCADA-System.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Brewery_SCADA_System</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
 </Project>
