--- a/.gitignore
+++ b/.gitignore
@@ -578,3 +578,11 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,dotnetcore,react,visualstudiocode,node
 
 Backend/Migrations/
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.db-shm
+*.db-wal
