--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@microsoft/signalr": "^7.0.7",
+    "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.6",
     "axios": "^1.4.0",
     "react": "^18.2.0",
